# robot_navigation

./: README.md  techstack.md  techstack.yml
costmap_queue/: CMakeLists.txt  README.md  package.xml
costmap_queue/include/costmap_queue/: costmap_queue.h  limited_costmap_queue.h  map_based_queue.h
costmap_queue/src/: costmap_queue.cpp  limited_costmap_queue.cpp
costmap_queue/test/: utest.cpp
dlux_global_planner/: CMakeLists.txt  Derivation.md  README.md  nav_core2_plugins.xml  package.xml
dlux_global_planner/doc/: Derivation.md  README.md  equations.py
dlux_global_planner/include/dlux_global_planner/: cost_interpreter.h  dlux_global_planner.h  kernel_function.h  potential.h  potential_calculator.h  traceback.h
dlux_global_planner/src/: cost_interpreter.cpp  dlux_global_planner.cpp  planner_node.cpp
dlux_global_planner/test/: global_oscillation_test.cpp  global_oscillation_test.launch  kernel_test.cpp
dlux_plugins/: CMakeLists.txt  README.md  dlux_global_planner_plugins.xml  package.xml
dlux_plugins/include/dlux_plugins/: astar.h  dijkstra.h  gradient_path.h  grid_path.h  von_neumann_path.h
dlux_plugins/src/: astar.cpp  dijkstra.cpp  gradient_path.cpp  grid_path.cpp  von_neumann_path.cpp
dlux_plugins/test/: common.yaml  full_planner_test.cpp  full_planner_test.launch  global_oscillation_test.cpp  global_oscillation_test.launch  map.yaml  node_test.launch  planner_test.cpp  planner_test.launch  rviz.rviz
dwb_critics/: CMakeLists.txt  README.md  package.xml
dwb_critics/include/dwb_critics/: base_obstacle.h  map_grid.h  obstacle_footprint.h  oscillation.h  prefer_forward.h  rotate_to_goal.h
dwb_critics/src/: base_obstacle.cpp  goal_align.cpp  goal_dist.cpp  map_grid.cpp  obstacle_footprint.cpp  oscillation.cpp  path_align.cpp  path_dist.cpp  prefer_forward.cpp  rotate_to_goal.cpp  twirling.cpp
dwb_local_planner/: CMakeLists.txt  README.md  package.xml
dwb_local_planner/include/dwb_local_planner/: debug_dwb_local_planner.h  dwb_local_planner.h  goal_checker.h  publisher.h  trajectory_critic.h  trajectory_generator.h  trajectory_utils.h
dwb_local_planner/src/: debug_dwb_local_planner.cpp  dwb_local_planner.cpp  planner_node.cpp  publisher.cpp  trajectory_utils.cpp
dwb_local_planner/test/: utils_test.cpp
dwb_msgs/: CMakeLists.txt  package.xml
global_planner_tests/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
global_planner_tests/config/: standard_tests.yaml
global_planner_tests/include/global_planner_tests/: easy_costmap.h  global_planner_tests.h  many_map_test_suite.h  util.h
global_planner_tests/src/: easy_costmap.cpp  global_planner_tests.cpp  gpt_node.cpp  heatmap_node.cpp  many_map_node.cpp  many_map_test_suite.cpp  util.cpp
locomotor/: CMakeLists.txt  README.md  package.xml
locomotor/doc/: BuildingOnTop.md  ErrorHandling.md  ExampleStateMachines.md  Motivation.md  MultiplePlanners.md  PrimaryDesign.md
locomotor/doc/figures/: action_server.flow  error_handling.flow  generate.py  single_thread.flow  two_thread.flow
locomotor/include/locomotor/: executor.h  locomotor.h  locomotor_action_server.h  publishers.h
locomotor/scripts/: send_action.py
locomotor/src/: double_thread_locomotor.cpp  executor.cpp  locomotor.cpp  locomotor_action_server.cpp  publishers.cpp  single_thread_locomotor.cpp
locomotor_msgs/: CMakeLists.txt  README.md  package.xml
locomotor_msgs/action/: NavigateToPose.action
locomotor_msgs/msg/: NavigationState.msg  ResultCode.msg
locomove_base/: CMakeLists.txt  README.md  package.xml
locomove_base/include/locomove_base/: locomove_base.h
locomove_base/src/: locomove_base.cpp
nav_2d_msgs/: CMakeLists.txt  README.md  package.xml
nav_2d_msgs/msg/: ComplexPolygon2D.msg  NavGridInfo.msg  NavGridOfChars.msg  NavGridOfCharsUpdate.msg  NavGridOfDoubles.msg  NavGridOfDoublesUpdate.msg  Point2D.msg  Polygon2DCollection.msg  Polygon2DStamped.msg  UIntBounds.msg
nav_2d_msgs/srv/: SwitchPlugin.srv
nav_2d_utils/: CMakeLists.txt  README.md  package.xml  setup.py
nav_2d_utils/doc/: Conversions.md  PluginMux.md  PolygonsAndFootprints.md
nav_2d_utils/include/mapbox/: NOTES
nav_2d_utils/include/nav_2d_utils/: bounds.h  conversions.h  footprint.h  geometry_help.h  odom_subscriber.h  parameters.h  path_ops.h  plugin_mux.h  polygons.h  tf_help.h
nav_2d_utils/src/: bounds.cpp  conversions.cpp  footprint.cpp  path_ops.cpp  polygons.cpp  tf_help.cpp
nav_2d_utils/src/nav_2d_utils/: conversions.py
nav_2d_utils/test/: bounds_test.cpp  compress_test.cpp  param_tests.cpp  param_tests.launch  polygon_tests.cpp  resolution_test.cpp  split_plan_test.cpp
nav_core2/: CMakeLists.txt  README.md  package.xml
nav_core2/include/nav_core2/: basic_costmap.h  bounds.h  common.h  costmap.h  exceptions.h  global_planner.h  local_planner.h
nav_core2/src/: basic_costmap.cpp
nav_core2/test/: bounds_test.cpp  exception_test.cpp
nav_core_adapter/: CMakeLists.txt  README.md  nav_core2_plugins.xml  nav_core_plugins.xml  package.xml
nav_core_adapter/include/nav_core_adapter/: costmap_adapter.h  global_planner_adapter.h  global_planner_adapter2.h  local_planner_adapter.h  shared_pointers.h
nav_core_adapter/src/: costmap_adapter.cpp  global_planner_adapter.cpp  global_planner_adapter2.cpp  local_planner_adapter.cpp
nav_core_adapter/test/: unload_test.cpp  unload_test.launch
nav_grid/: CMakeLists.txt  README.md  package.xml
nav_grid/include/nav_grid/: coordinate_conversion.h  index.h  nav_grid.h  nav_grid_info.h  vector_nav_grid.h
nav_grid/test/: utest.cpp
nav_grid_iterators/: CMakeLists.txt  README.md  package.xml
nav_grid_iterators/demo/: demo.cpp  demo.launch  demo.rviz
nav_grid_iterators/src/: bresenham.cpp  circle_fill.cpp  circle_outline.cpp  line.cpp  polygon_fill.cpp  polygon_outline.cpp  ray_trace.cpp  spiral.cpp  sub_grid.cpp  whole_grid.cpp
nav_grid_iterators/test/: line_tests.cpp  utest.cpp
nav_grid_pub_sub/: CMakeLists.txt  README.md  package.xml
nav_grid_pub_sub/doc/: CostInterpretation.md
nav_grid_pub_sub/src/: cost_interpretation_tables.cpp  nav_grid_subscriber.cpp
(+130 files in other folders)
