<?xml version="1.0"?>
<package format="2">
  <name>costmap_queue</name>
  <version>0.3.0</version>
  <description>Tool for iterating through the cells of a costmap to find the closest distance to a subset of cells.</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_core2</depend>
  <depend>roscpp</depend>
  <test_depend>roslint</test_depend>
  <test_depend>rosunit</test_depend>

</package>
