<?xml version="1.0"?>
<package format="2">
  <name>dlux_plugins</name>
  <version>0.3.0</version>
  <description>
    Implementation of dlux_global_planner plugin interfaces.
  </description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dlux_global_planner</depend>
  <depend>nav_core2</depend>
  <depend>nav_grid</depend>
  <depend>pluginlib</depend>
  <test_depend>global_planner_tests</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
  <export>
    <dlux_global_planner plugin="${prefix}/dlux_global_planner_plugins.xml"/>
  </export>
</package>
