<?xml version="1.0"?>
<package format="2">
  <name>dwb_critics</name>
  <version>0.3.0</version>
  <description>
    Implementations for dwb_local_planner TrajectoryCritic interface
  </description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>costmap_queue</depend>
  <depend>dwb_local_planner</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_2d_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav_core2</depend>
  <depend>nav_grid_iterators</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <test_depend>roslint</test_depend>

  <export>
      <dwb_local_planner plugin="${prefix}/default_critics.xml"/>
  </export>
</package>
