<?xml version="1.0"?>
<package format="2">
  <name>dwb_local_planner</name>
  <version>0.3.0</version>
  <description>
    Plugin based local planner implementing the nav_core2::LocalPlanner interface.
  </description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <author email="davidvlu@gmail.com">David V. Lu!!</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dwb_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_2d_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav_core2</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
  <export>
    <nav_core2 plugin="${prefix}/plugins.xml"/>
  </export>
</package>
