<?xml version="1.0"?>
<package format="2">
  <name>nav_2d_utils</name>
  <version>0.3.0</version>
  <description>A handful of useful utility functions for nav_core2 packages.</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_2d_msgs</depend>
  <depend>nav_core2</depend>
  <depend>nav_grid</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>xmlrpcpp</depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
