<?xml version="1.0"?>
<package format="2">
  <name>nav_core2</name>
  <version>0.3.0</version>
  <description>
      Interfaces for Costmap, LocalPlanner and GlobalPlanner. Replaces nav_core.
  </description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_2d_msgs</depend>
  <depend>nav_grid</depend>
  <depend>tf2_ros</depend>
  <test_depend>roslint</test_depend>
  <test_depend>rosunit</test_depend>
</package>
