<?xml version="1.0"?>
<package format="2">
  <name>nav_core_adapter</name>
  <version>0.3.0</version>
  <description>
      This package contains adapters for using `nav_core` plugins as `nav_core2` plugins and vice versa (more or less).
      See README.md for more information.
  </description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_2d_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav_core</depend>
  <depend>nav_core2</depend>
  <depend>nav_grid</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

  <!-- When running the unload test, it loads DWB, so these are needed -->
  <test_depend>dwb_local_planner</test_depend>
  <test_depend>dwb_plugins</test_depend>
  <test_depend>dwb_critics</test_depend>

  <export>
    <nav_core plugin="${prefix}/nav_core_plugins.xml"/>
    <nav_core2 plugin="${prefix}/nav_core2_plugins.xml"/>
  </export>
</package>
