<?xml version="1.0"?>
<package format="2">
  <name>nav_grid</name>
  <version>0.3.0</version>
  <description>
    A templatized interface for overlaying a two dimensional grid on the world.
  </description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rosunit</test_depend>
</package>
